[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "myagent"
version = "1.0.0"
description = "智能体框架"
readme = "README.md"
license = "MIT"
authors = ["cybzq37 <cybzq37@gmail.com>"]
packages = [{include = "myagent", from = "src"}]

[tool.poetry.urls]
Homepage = "https://github.com/cybzq37/myagent"

[tool.poetry.dependencies]
python = ">=3.10"
# 核心依赖
openai = ">=1.0.0,<2.0.0"
requests = ">=2.25.0,<3.0.0"
python-dotenv = ">=0.19.0,<2.0.0"
pydantic = ">=2.0.0,<3.0.0"
numpy = ">=2.0.0,<3.0.0"
networkx = ">=2.6.0,<4.0.0"
tiktoken = ">=0.5.0"
pyyaml = ">=6.0.0"
# 可选依赖（按需启用）
google-genai = {version = ">=1.0.0", optional = true}
anthropic = {version = ">=0.20.0", optional = true}

[tool.poetry.extras]
gemini = ["google-genai"]
anthropic = ["anthropic"]

# ===== 开发依赖 =====
[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
isort = ">=5.0.0"
mypy = ">=1.0.0"

# ===== 工具配置 =====

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
